@@ -45,7 +45,6 @@ import java.util.function.Supplier;
 
 import static com.hedera.services.context.properties.StaticPropertiesHolder.STATIC_PROPERTIES;
 import static com.hedera.services.state.submerkle.RichInstant.fromJava;
-import static java.util.stream.Collectors.toList;
 
 public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private static final Logger log = LogManager.getLogger(MerkleNetworkContext.class);
@@ -481,7 +480,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private void reset(List<DeterministicThrottle> throttles, GasLimitDeterministicThrottle gasLimitThrottle) {
 		var currUsageSnapshots = throttles.stream()
 				.map(DeterministicThrottle::usageSnapshot)
-				.collect(toList());
+				.toList();
 		for (int i = 0, n = usageSnapshots.length; i < n; i++) {
 			var savedUsageSnapshot = usageSnapshots[i];
 			var throttle = throttles.get(i);
