@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Singleton
 public class DecodingFacade {
@@ -139,7 +138,7 @@ public class DecodingFacade {
 		return tokenTransferLists;
 	}
 
-	public SyntheticTxnFactory.BurnWrapper decodeBurn(final Bytes input) {
+	public BurnWrapper decodeBurn(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, BURN_TOKEN_SELECTOR, BURN_TOKEN_DECODER);
 
 		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
@@ -147,15 +146,15 @@ public class DecodingFacade {
 		final var serialNumbers = (long[]) decodedArguments.get(2);
 
 		if (fungibleAmount > 0) {
-			return SyntheticTxnFactory.BurnWrapper.forFungible(
+			return BurnWrapper.forFungible(
 					tokenID, fungibleAmount);
 		} else {
-			return SyntheticTxnFactory.BurnWrapper.forNonFungible(
-					tokenID, Arrays.stream(serialNumbers).boxed().collect(Collectors.toList()));
+			return BurnWrapper.forNonFungible(
+					tokenID, Arrays.stream(serialNumbers).boxed().toList());
 		}
 	}
 
-	public SyntheticTxnFactory.MintWrapper decodeMint(final Bytes input) {
+	public MintWrapper decodeMint(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, MINT_TOKEN_SELECTOR, MINT_TOKEN_DECODER);
 
 		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
@@ -170,10 +169,10 @@ public class DecodingFacade {
 		}
 
 		if (fungibleAmount > 0) {
-			return SyntheticTxnFactory.MintWrapper.forFungible(
+			return MintWrapper.forFungible(
 					tokenID, fungibleAmount);
 		} else {
-			return SyntheticTxnFactory.MintWrapper.forNonFungible(
+			return MintWrapper.forNonFungible(
 					tokenID, !metadataByteStringList.isEmpty() ? metadataByteStringList :
 							Collections.singletonList(ByteString.copyFrom("".getBytes())));
 		}
@@ -244,43 +243,43 @@ public class DecodingFacade {
 		return Collections.singletonList(new SyntheticTxnFactory.TokenTransferList(nftExchanges, new ArrayList<>()));
 	}
 
-	public SyntheticTxnFactory.Association decodeAssociation(final Bytes input) {
+	public Association decodeAssociation(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, ASSOCIATE_TOKEN_SELECTOR, ASSOCIATE_TOKEN_DECODER);
 
 		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
 		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(1));
 
-		return SyntheticTxnFactory.Association.singleAssociation(
+		return Association.singleAssociation(
 				accountID, tokenID);
 	}
 
-	public SyntheticTxnFactory.Association decodeMultipleAssociations(final Bytes input) {
+	public Association decodeMultipleAssociations(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, ASSOCIATE_TOKENS_SELECTOR, ASSOCIATE_TOKENS_DECODER);
 
 		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
 		final var tokenIDs = decodeTokenIDsFromBytesArray((byte[][]) decodedArguments.get(1));
 
-		return SyntheticTxnFactory.Association.multiAssociation(
+		return Association.multiAssociation(
 				accountID, tokenIDs);
 	}
 
-	public SyntheticTxnFactory.Dissociation decodeDissociate(final Bytes input) {
+	public Dissociation decodeDissociate(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, DISSOCIATE_TOKEN_SELECTOR, DISSOCIATE_TOKEN_DECODER);
 
 		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
 		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(1));
 
-		return SyntheticTxnFactory.Dissociation.singleDissociation(
+		return Dissociation.singleDissociation(
 				accountID, tokenID);
 	}
 
-	public SyntheticTxnFactory.Dissociation decodeMultipleDissociations(final Bytes input) {
+	public Dissociation decodeMultipleDissociations(final Bytes input) {
 		final Tuple decodedArguments = decodeFunctionCall(input, DISSOCIATE_TOKENS_SELECTOR, DISSOCIATE_TOKENS_DECODER);
 
 		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
 		final var tokenIDs = decodeTokenIDsFromBytesArray((byte[][]) decodedArguments.get(1));
 
-		return SyntheticTxnFactory.Dissociation.multiDissociation(
+		return Dissociation.multiDissociation(
 				accountID, tokenIDs);
 	}
 
